# ng-extra

./: .clang-format  .travis.yml  BUILD.bazel  README.md  WORKSPACE  build-config.js  package-lock.json  package.json  tslint.json
.circleci/: config.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
e2e/: index-e2e.spec.ts
scripts/caretaking/: write-presumbit-scheduler.js
scripts/ci/: travis-env.sh
scripts/closure-compiler/: build-devapp-bundle.sh
scripts/deploy/: deploy-dashboard.sh  deploy-screenshot-tool.sh  publish-build-artifacts.sh  publish-docs-content.sh
src/demo-app/: demo-app-module.ts  demo-ng-extra-module.ts  index.html  main-aot.ts  main.ts  system-config.ts  theme.scss  tsconfig-aot.json  tsconfig-build.json  tsconfig.json
src/e2e-app/: e2e-app-module.ts  index.html  main.ts  system-config.ts  tsconfig-build.json  tsconfig.json
src/ion-extra/: package.json  public-api.ts  tsconfig-build.json  tsconfig-tests.json  tsconfig.json
src/mat-extra/: package.json  tsconfig-build.json  tsconfig-tests.json  tsconfig.json  version.ts
src/ng-extra/: package.json  public-api.ts  tsconfig-build.json  tsconfig-tests.json  tsconfig.json
src/ng-extra/geolocation/: BUILD.bazel  README.md  geolocation-module.ts  geolocation-service.spec.ts  geolocation.ts  public-api.ts  tsconfig-build.json
src/universal-app/: index.html  tsconfig-build.json  tsconfig-prerender.json  tsconfig.json
test/: karma-test-shim.js  karma.conf.js  protractor.conf.js
tools/axe-protractor/: axe-protractor.js
tools/dashboard/: .angular-cli.json  package.json
(+57 files in other folders)
