package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")

ng_module(
  name = "geolocation",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@gnucoop/ng-extra/button_toggle",
  assets = [],
  deps = [],
  tsconfig = ":tsconfig-build.json",
)
